2012-02-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/snmpconsole/snmp_view.php: Added type in snmp alert view
	and added None option in trap type filter.

2012-02-10  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql
	  pandoradb.postgreSQL.sql
	  pandoradb.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Changed type of 'value'
	to tconfig table.

2012-02-10 Dario Rodriguez <dario.rodriguez@artica.es>

        * include/functions_modules.php: Changed module status image for unknown
        status to gray.

2012-02-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php: Added colors in name and group
	at creation time and now update button is showed when a filter is
	created.

2012-02-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/help/en/help_field_match_snmp.php
	 include/help/es/help_field_match_snmp.php
	 godmode/snmpconsole/snmp_alert.php: Changed order of fields in this 
	 view.

2012-02-09  Sergio Martin <sergio.martin@artica.es>

	* godmode/groups/group_list.php: Cleaned old code used in
	policy filter ajax call

2012-02-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php: Changed toggle filter in this
	view.
	* operation/netflow/nf_live_view.php: Changed filters of netflow
	to javascript code.

2012-02-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* Changelog: I forgot to update Changelog.

2012-02-09  Vanessa Gil  <vanessa.gil@artica.es>
	* operation/events/events_list.php: show 'source' and 'extra id' fields
	in event view when the value is empty.

2012-02-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* Changelog: I forgot to update Changelog.

2012-02-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/snmpconsole/snmp_alert.php: OID field moved from conf.
	part of the view to filter part.
